# PrtSc

./: CMakeLists.txt  README.md  reademe.txt
src/: PrtSc.cpp
